fixed weird scrolling for complete profile modal on mobile

--- a/public/bootstrap/less/trpModals.less
+++ b/public/bootstrap/less/trpModals.less
@@ -128,7 +128,8 @@
     width: 100%;
     margin-top: 0px;
     margin-left: 0px;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: auto;
     max-height: 100%;
     height: 100%;
   }
@@ -167,7 +168,7 @@ body.modal-open {
 .modal-body {
   padding: @padding @padding 0 @padding;
   max-height: 440px;
-  overflow-y: auto;
+  overflow: hidden;
   display: block;
 }
 
